fix: better align the brightness slider
it was just a little misaligned with the text and the slider + label
could use a little more spacing

--- a/cover.css
+++ b/cover.css
@@ -86,7 +86,11 @@ select {
 }
 #brightnessRange {
   display: inline;
+  height: 9px;
   width: auto;
+}
+.slider-wrapper {
+  margin-top: 10px;
 }
 #matrix {
   align-items: stretch;
